Link padding adjustment to stop from jumping to two lines

--- a/wp-content/themes/wp-shield/static/assets/css/style.css
+++ b/wp-content/themes/wp-shield/static/assets/css/style.css
@@ -2820,10 +2820,10 @@ Nav
 .nav--basic a {
   display: block;
   border-radius: .8rem;
-  padding: 1.4rem 1rem 1.4rem 0;
+  padding: 1.4rem 2.6rem 1.4rem 0;
   transition: all .3s ease; }
   .nav--basic a:hover {
-    padding-left: 1.6rem;
+    padding: 1.4rem 1.6rem;
     color: #C0511B;
     background: #F7F5F0; }
 
